[gd_scene load_steps=11 format=2]

[ext_resource path="res://_LamTyrant/characters/TyProps.gd" type="Script" id=1]
[ext_resource path="res://addons/collision_box/CollisionBox.gd" type="Script" id=2]
[ext_resource path="res://characters/BaseChar.gdshader" type="Shader" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]
[ext_resource path="res://framework/FiniteStateMachine/StateMachine.gd" type="Script" id=6]
[ext_resource path="res://characters/BoxDraw.gd" type="Script" id=7]
[ext_resource path="res://projectile/IndicatorDraw.gd" type="Script" id=8]
[ext_resource path="res://_LamTyrant/characters/TyPropsSub.gd" type="Script" id=9]
[ext_resource path="res://_LamTyrant/characters/Assets/TyProps.tres" type="SpriteFrames" id=11]

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/use_extra_color_1 = false
shader_param/use_extra_color_2 = false
shader_param/extra_replace_color_1 = Color( 1, 0, 1, 1 )
shader_param/extra_replace_color_2 = Color( 1, 0, 1, 1 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/extra_color_1 = Color( 1, 1, 1, 1 )
shader_param/extra_color_2 = Color( 1, 1, 1, 1 )
shader_param/max_color_distance = 0.01
shader_param/super_dim = false
shader_param/use_outline = false
shader_param/outline_color = Color( 0, 0, 0, 1 )

[node name="Scythe" type="Node2D"]
material = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Big2"
}
gravity = "0"
ground_friction = "0"
air_friction = "0"
max_ground_speed = "12"
max_air_speed = "12"
max_fall_speed = "10"
extra_state_variables = "scale
realtick
hp
abslife
icecount
shard
hitter
cooldown1
cooldown2"
has_projectile_parry_window = false
deletes_other_projectiles = false
movable = false
apply_hitlag_when_hit_by_melee = false
projectile_immune = true

[node name="Flip" type="Node2D" parent="."]

[node name="Sprite" type="AnimatedSprite" parent="Flip"]
unique_name_in_owner = true
position = Vector2( 1, -22 )
frames = ExtResource( 11 )
animation = "Scythe4"
speed_scale = 4.0
offset = Vector2( 0, -2 )

[node name="Particles" type="Node2D" parent="Flip"]
unique_name_in_owner = true

[node name="Sounds" type="Node2D" parent="."]

[node name="CollisionBox" type="Node2D" parent="."]
position = Vector2( 0, -22 )
z_index = 1000
script = ExtResource( 2 )
y = 5
width = 9
height = 19

[node name="Hurtbox" type="Node2D" parent="."]
position = Vector2( 0, -22 )
z_index = 1000
script = ExtResource( 2 )
y = 5
width = 9
height = 19

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Scythe4" type="Node2D" parent="StateMachine"]
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}
apply_forces = true
apply_fric = true
apply_grav = true
fallback_state = "Scythe4"
anim_length = 999
ticks_per_frame = 2
loop_animation = true
endless = true
sfx_volume = 2.0

[node name="BoxDraw" type="Node2D" parent="."]
visible = false
z_index = 4096
script = ExtResource( 7 )

[node name="IndicatorDraw" type="Node2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.588235 )
z_index = 4096
script = ExtResource( 8 )

[node name="Label" type="Label" parent="IndicatorDraw"]
margin_left = -20.0
margin_top = -16.0
margin_right = 20.0
margin_bottom = 15.0
theme = ExtResource( 4 )
text = "P1"
align = 1
valign = 1
